--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -6,12 +6,13 @@
     width: 100%;
     will-change: contents;
 
+
     @media (min-width: 48em) {
         .home-page & {
             transform: translateY(-110%);
             &._is-visible {
-                transform: translateY(0);
-                transition: transform 2s cubic-bezier(0.22, 1, 0.36, 1);
+                transition: transform 1s cubic-bezier(0.22, 1, 0.36, 1);
+                transform: translate3d(0, calc(var(--scrollY) * -1), 0);
             }
         }
 
