--- a/src/scss/sections/_hero.scss
+++ b/src/scss/sections/_hero.scss
@@ -1,6 +1,6 @@
 .hero {
     position: relative;
-    margin-bottom: 22rem;
+    margin-bottom: 0;
     min-height: 110.6rem;
     overflow: hidden;
 
