feat: author section mobile version

--- a/src/components/_author.html
+++ b/src/components/_author.html
@@ -14,7 +14,8 @@
                     <div class="author__subtitle">основатель компании</div>
                     <h2 class="h h_2">Роман лантрат</h2>
                 </div>
-                <ul class="author__info">
+
+                <ul class="author__info _desktop-only">
                     <li>
                         <p>
                             В сервисах проката автомобиля возможен выбор машины любой марки, модели или цвета.
@@ -38,6 +39,38 @@
                         </p>
                     </li>
                 </ul>
+
+                <div data-showmore="mm" class="author__info-wrapper _mobile-only">
+                    <ul data-showmore-content="17" class="author__info">
+                        <li>
+                            <p>
+                                В сервисах проката автомобиля возможен выбор машины любой марки, модели или
+                                цвета. В наши дни разнообразие весьма велико, – настолько, что позволяет
+                                сделать идеальный выбор. На нашем сайте возможна аренда машин на различных
+                                условиях, удобных для клиентов. Например, при большом стаже вождения доступны
+                                дополнительные опции при прокате авто.
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                В сервисах проката автомобиля возможен выбор машины любой марки, модели или
+                                цвета. В наши дни разнообразие весьма велико, – настолько, что позволяет
+                                сделать идеальный выбор.
+                            </p>
+                            <p>
+                                <span>
+                                    На нашем сайте возможна аренда машин на различных условиях, удобных для
+                                    клиентов.
+                                </span>
+                            </p>
+                        </li>
+                    </ul>
+
+                    <button data-showmore-button="" type="button" class="author__info-btn link">
+                        <span>Развернуть</span><span>Свернуть</span>
+                    </button>
+                </div>
+
                 <div class="author__tag">
                     <img src="../assets/images/sections/author/author-tag.png" alt="" />
                 </div>
