feat: footer monile version

--- a/src/components/_author.html
+++ b/src/components/_author.html
@@ -3,10 +3,10 @@
         <div class="author__inner">
             <div class="author__left">
                 <div class="author__portrait">
-                    <img src="../assets/images/sections/author/author-portrait.png" alt="" />
+                    <img src="./assets/images/sections/author/author-portrait.png" alt="" />
                 </div>
                 <div class="author__bg">
-                    <img src="../assets/images/logo.svg" alt="" />
+                    <img src="./assets/images/logo.svg" alt="" />
                 </div>
             </div>
             <div class="author__right">
@@ -72,7 +72,7 @@
                 </div>
 
                 <div class="author__tag">
-                    <img src="../assets/images/sections/author/author-tag.png" alt="" />
+                    <img src="./assets/images/sections/author/author-tag.png" alt="" />
                 </div>
             </div>
         </div>
