--- a/src/components/_condition.html
+++ b/src/components/_condition.html
@@ -150,7 +150,7 @@
                                 эконом и среднего класса;
                             </p>
                             <div class="condition__info-bg">
-                                <img src="../assets/images/sections/condition/1.svg" alt="" />
+                                <img src="./assets/images/sections/condition/1.svg" alt="" />
                             </div>
                         </div>
                         <div class="condition__info-item">
