--- a/src/components/footer.html
+++ b/src/components/footer.html
@@ -4,7 +4,7 @@
             <div class="footer__main">
                 <div class="footer__main-left">
                     <div class="footer__logo">
-                        <a href="#"><img src="../assets/images/logo.png" alt="" /></a>
+                        <a href="#"><img src="../assets/images/logo.svg" alt="" /></a>
                     </div>
                     <p>Прокат автомобилей в городе Южно-сахалинске</p>
                 </div>
@@ -105,13 +105,18 @@
             </div>
             <div class="footer__bottom">
                 <ul>
-                    <li>&copy; 2016-2023 Права защищены</li>
-                    <li>Положение об обработке и защите персональных данных сотрудников</li>
+                    <li>
+                        <a href="#"> Пользовательское соглашение </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            Политики обработки персональных данных
+                        </a>
+                    </li>
                     <li class="rd-logo">
-                        <div class="rd-logo__icon">
-                            <img src="../assets/images/RD-logo.svg" alt="" />
-                        </div>
-                        <p>Разработано Request Design</p>
+                        <a href="#">
+                            © 2016-2023 Права защищены
+                        </a>
                     </li>
                 </ul>
             </div>
