feat: contacts mobile version

--- a/src/scss/dev/kie6er.scss
+++ b/src/scss/dev/kie6er.scss
@@ -21,6 +21,21 @@
     display: flex;
     align-items: center;
     gap: 1.6rem;
+
+    @include small-tablet {
+        gap: 2.4rem;
+        align-self: flex-start;
+
+        .icon {
+            width: 10.4rem;
+            height: 10.4rem;
+
+            svg {
+                width: 3.2rem;
+                height: 3.2rem;
+            }
+        }
+    }
 }
 
 [class*='--map-copyrights'] {
