--- a/src/scss/sections/_condition.scss
+++ b/src/scss/sections/_condition.scss
@@ -1,4 +1,20 @@
 .condition {
+    @include small-tablet{
+        overflow: hidden;
+    }
+
+    &__pagination {
+        @include small-tablet{
+            justify-content: center;
+        }
+    }
+
+    &__slider {
+        @include small-tablet{
+            overflow: visible !important;
+        }
+    }
+
     // .condition__inner
     &__inner {
         display: flex;
@@ -9,7 +25,8 @@
     &__content {
         display: flex;
         flex-direction: column;
-        gap: 9rem;
+        gap: 3rem;
+
         &-top {
             position: relative;
 
@@ -62,28 +79,68 @@
         &-block {
             position: relative;
             display: grid;
-            grid-template-columns: repeat(3, 39.9rem);
+            grid-template-columns: repeat(3, 37.9rem);
             justify-content: space-between;
             margin-bottom: 6rem;
+            padding-top: 6rem;
+
+            @include small-tablet{
+                margin-bottom: 5rem;
+            }
+
+            .swiper-slide {
+                width: auto;
+            }
         }
         &-item {
             position: relative;
+            max-width: 37.9rem;
             display: flex;
             flex-direction: column;
             gap: 2rem;
 
-            max-width: 37.9rem;
+            @include small-tablet {
+                flex-direction: row;
+                gap: 2.4rem;
+                max-width: 100%;
+            }
+
+            &-text-content {
+                display: flex;
+                flex-direction: column;
+                gap: 2rem;
+
+                @include small-tablet{
+                    max-width: 55.8rem;
+                    gap: 1.6rem;
+                }
+            }
+
+            &-icon {
+                @include small-tablet {
+                    @include sizes(12.8rem, 12.8rem);
+                }
+            }
         }
         &-title {
             font-weight: 500;
             font-size: 3.2rem;
             line-height: 140%;
             color: $white;
+
+            @include small-tablet {
+                font-size: 3.6rem;
+                max-width: 80%;
+            }
         }
         &-text {
             font-size: 1.8rem;
             line-height: 140%;
             color: $gray;
+
+            @include small-tablet {
+                font-size: 3rem;
+            }
         }
         &-bg {
             position: absolute;
@@ -91,6 +148,17 @@
             right: 0;
             top: -6rem;
             z-index: -1;
+
+            @include small-tablet{
+                right: 1rem;
+                top: -6rem;
+                height: 16.8rem;
+                width: 12.2rem;
+
+                img {
+                    height: 100%;
+                }
+            }
         }
         &-read {
             display: flex;
@@ -99,11 +167,30 @@
 
             border: 0.1rem solid #24272a;
             padding: 3.7rem 10rem;
+
+            @include small-tablet {
+                flex-direction: column;
+                padding: 4.8rem;
+                gap: 4.8rem;
+                text-align: center;
+                margin-top: 8rem;
+
+                .btn {
+                    width: 100%;
+                }
+            }
+
             p {
                 font-weight: 500;
                 font-size: 3.2rem;
                 line-height: 140%;
                 color: $white;
+
+                @include small-tablet {
+                    font-weight: 500;
+                    font-size: 3.6rem;
+                    line-height: 140%;
+                }
             }
         }
     }
@@ -112,6 +199,36 @@
         padding: 5.8rem 0;
         background-color: #24272a;
         position: relative;
+
+        @include small-tablet{
+            padding: 8.6rem 0;
+        }
+
+        &-pagination {
+            @include small-tablet{
+                justify-content: center;
+                margin-top: 6rem;
+                position: relative;
+                z-index: 1;
+            }
+        }
+
+        .swiper-slide {
+            &:hover {
+                .condition__slider-image {
+                    transform: scale(1.1);
+                }
+            }
+
+            p {
+                white-space: nowrap;
+
+                @include small-tablet{
+                    font-weight: 700;
+                    font-size: 3rem;
+                }
+            }
+        }
 
         &::after {
             content: '';
@@ -131,10 +248,28 @@
         }
     }
     // .condition__slider
+    &__slider-image {
+        transition: 0.3s transform ease;
+
+        @include small-tablet{
+            width: 100%;
+            height: 15rem;
+
+            img {
+                height: 100%;
+                object-fit: cover;
+            }
+        }
+    }
+
     &__slider.swiper {
         width: 135.2rem;
         margin: 0 auto;
         position: static;
+
+        @include small-tablet {
+            width: 100%;
+        }
     }
     // .condition__slider-wrapper
     &__slider-wrapper.swiper-wrapper {
@@ -148,6 +283,10 @@
         align-items: center;
         flex-direction: column;
         gap: 2.3rem;
+
+        @include small-tablet{
+            gap: 4rem;
+        }
 
         p {
             // font-family: 'Gilroy';
