--- a/src/scss/sections/_contact.scss
+++ b/src/scss/sections/_contact.scss
@@ -24,6 +24,20 @@
         display: flex;
         flex-direction: column;
         gap: 4rem;
+        position: relative;
+
+        &::after{
+            @include pseudo{
+                z-index: -1;
+                width: 18.6rem;
+                height: 9.6rem;
+                bottom: 22rem;
+                right: 52rem;
+                border-radius: 50%;
+                filter: blur(7.9rem);
+                background: #ffffff;
+            }
+        }
 
         @include small-tablet{
             flex-direction: column-reverse;
@@ -169,7 +183,7 @@
             content: '';
             width: 100%;
             height: 100%;
-            background: url('../../assets/images/components/contact-form/contact-form-bg.png') center / cover
+            background: url('./assets/images/components/contact-form/contact-form-bg.png') center / cover
                 no-repeat;
 
             position: absolute;
@@ -187,6 +201,8 @@
 
         position: relative;
         z-index: 1;
+
+
 
         @include small-tablet{
             gap: 7.5rem;
