--- a/src/components/_banner.html
+++ b/src/components/_banner.html
@@ -1,4 +1,4 @@
-<section class="banner">
+<section class="banner _is-visible">
     <a href="#" class="banner__inner">
         <div class="banner__container container">
             <div class="banner__content">
