--- a/src/components/_condition.html
+++ b/src/components/_condition.html
@@ -1,6 +1,6 @@
-<section class="condition">
+<section  data-scroll class="condition">
     <div class="condition__inner">
-        <div class="container">
+        <div class="condition__head container">
             <h2 class="h h_2">Условия проката</h2>
         </div>
         <div class="condition__content">
