--- a/src/components/_author.html
+++ b/src/components/_author.html
@@ -1,4 +1,4 @@
-<section class="author">
+<section  data-scroll class="author">
     <div class="container">
         <div class="author__inner">
             <div class="author__left">
