--- a/src/components/_condition.html
+++ b/src/components/_condition.html
@@ -1,4 +1,4 @@
-<section  data-scroll class="condition">
+<section class="condition">
     <div class="condition__inner">
         <div class="condition__head container">
             <h2 class="h h_2">Условия проката</h2>
