--- a/src/components/_advantages.html
+++ b/src/components/_advantages.html
@@ -1,4 +1,4 @@
-<section data-scroll class="advantages">
+<section class="advantages">
     <div class="advantages__container container">
         <div class="advantages__head">
             <div class="advantages__heading-wrap">
