--- a/src/scss/sections/header.scss
+++ b/src/scss/sections/header.scss
@@ -6,6 +6,30 @@
     width: 100%;
     will-change: contents;
 
+    &::before {
+        content: '';
+        position: absolute;
+        z-index: 201;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(25, 28, 32, 1);
+        opacity: 0;
+        transition: opacity 0.3s ease;
+    }
+
+
+    @media (max-width: 48em) {
+        ._menu-opened & {
+            &::before {
+                opacity: 1;
+            }
+        }
+
+    }
+
+
 
     @media (min-width: 48em) {
         .home-page & {
@@ -18,15 +42,6 @@
 
     }
 
-    .icon {
-        @media (max-width: 48em) {
-            width: 10.4rem;
-            height: 10.4rem;
-        }
-        @media (min-width: 48em) {
-            display: none;
-        }
-    }
 
     // .header__container
 
@@ -37,9 +52,23 @@
         grid-template-columns: 5fr 2fr 5fr;
         align-items: center;
 
+
+        .icon {
+            @media (min-width: 48em) {
+                display: none;
+            }
+        }
+
         @media (max-width: 48em) {
+            position: relative;
+            z-index: 201;
             padding: 1.2rem 2rem;
             grid-template-columns: 10.4rem 1fr 10.4rem;
+
+            .icon {
+                width: 10.4rem;
+                height: 10.4rem;
+            }
         }
     }
 
@@ -148,6 +177,23 @@
             width: 4.8rem;
             height: 2.4rem;
         }
+
+        @media (max-width: 48em) {
+            &_close {
+                display: none;
+
+                &.icon svg {
+                    width: 3rem;
+                    height: 3rem;
+                }
+            }
+            ._menu-opened & {
+                display: none;
+               &_close {
+                   display: inline-flex;
+               }
+            }
+        }
     }
 
     // .header__select-lang
@@ -201,5 +247,63 @@
         &._is-selected {
             color: $orange;
         }
+    }
+}
+
+// --------------------------------------------------------------------------
+
+.menu-header {
+    position: fixed;
+    z-index: 200;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    padding: 26.6rem 2rem;
+    padding-bottom: 12rem;
+    display: flex;
+    flex-direction: column;
+    overflow: auto;
+    background-color: rgba(25, 28, 32, 1);
+    opacity: 0;
+    visibility: hidden;
+    transform: translateX(-110%);
+    transition: transform 0.3s cubic-bezier(0.22, 1, 0.36, 1), opacity 0.3s cubic-bezier(0.22, 1, 0.36, 1), visibility 0.3s cubic-bezier(0.22, 1, 0.36, 1);
+
+    ._menu-opened & {
+        transform: translateX(0);
+        opacity: 1;
+        visibility: visible;
+    }
+
+    @media (min-width: 48em) {
+        display: none;
+    }
+
+    &__nav {
+        margin-bottom: 12rem;
+        display: flex;
+        flex-direction: column;
+        row-gap: 6.4rem;
+    }
+
+    &__nav-link {
+        transition: color 0.3s ease;
+        &:active {
+            color: $orange;
+        }
+    }
+
+    &__contacts {
+        margin-bottom: 12rem;
+        display: flex;
+        column-gap: 2.4rem;
+    }
+
+    &__icon-wrap {
+    }
+
+    &__btn {
+        width: 100%;
     }
 }
