--- a/src/ui/styles/_icon.scss
+++ b/src/ui/styles/_icon.scss
@@ -43,6 +43,10 @@
         box-shadow: inset 0 -0.16rem 0.8rem rgba(255, 255, 255, 0.48),
             inset 0.32rem 0.32rem 0.16rem rgba(255, 255, 255, 0.1);
 
+        svg path {
+            fill: $white;
+        }
+
         &::after {
             background: linear-gradient(
                 180deg,
